--- a/PythonSimpleExercises.ipynb
+++ b/PythonSimpleExercises.ipynb
@@ -3543,6 +3543,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s ='hello'\n",
+    "# Print out the 'o'\n",
+    "\n",
+    "# Method 1:\n",
+    "s[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'o'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s ='hello'\n",
+    "# Print out the 'o'\n",
+    "\n",
+    "# Method 2:\n",
+    "s[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
