--- a/PythonFunctionsExercises.ipynb
+++ b/PythonFunctionsExercises.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,28 +523,74 @@
     "# containing only those arguments as even\n",
     "\n",
     "def myfunc(*args):\n",
+    "    #create an empty list\n",
+    "    even = []\n",
     "    \n",
-    "    # Getting length of list \n",
-    "    length = len(args) \n",
-    "    print(length)\n",
-    "    i = 0\n",
-    "    \n",
-    "    # Iterating using while loop \n",
-    "    while i < length:\n",
-    "        if (args[i] % 2 == 0):\n",
-    "            print(args[i]) \n",
-    "            i += 1\n",
-    "\n",
-    "# 2,4,56,100"
+    "    #for loop through list of arguments\n",
+    "    for i in args:\n",
+    "        \n",
+    "        # look for even values if mod 2\n",
+    "        if i % 2 == 0:\n",
+    "            \n",
+    "            #add even values to even list\n",
+    "            even.append(i)\n",
+    "            \n",
+    "    #only print final list        \n",
+    "    return even"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1000, 2, 36, 56, 100, 4, 500]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(1000,2,36,41,56,77,100,51,4,381,500) \n",
+    "# expected return values 1000,2,36,56,100,4,500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "myfunc(1,2,3,4,56,77,100)"
+    "#10 - define function myfunc takes in string and returns matching\n",
+    "# string with \n",
+    "#every even letter in upper case\n",
+    "#every odd letter in lower case\n",
+    "\n",
+    "def myfunc(old_string=\"abcdefg\"):\n",
+    "    new_string =\"\"\n",
+    "    for i in old_string:\n",
+    "        if index[i] %2 == 0:\n",
+    "            print(index[i])\n",
+    "            new_string.append(i.upper())\n",
+    "            print(new_string)\n",
+    "        else:\n",
+    "            new_string.append(i.lower())\n",
+    "            print(new_string)\n",
+    "    return new_string    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_string = \"abcdefgh\""
    ]
   }
  ],
