Functions with strings

--- a/PythonFunctionsExercises.ipynb
+++ b/PythonFunctionsExercises.ipynb
@@ -42,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1 function myfunc that prints string \"Hello World\"\n",
     "def myfunc():\n",
@@ -62,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Claudia\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2 function called myfunc that takes in name and prints 'Hello Name\n",
     "\n",
@@ -84,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,41 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myfunc('claudia')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Goodbye\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myfunc('john')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "b = 4\n",
     "c = 5\n",
@@ -170,20 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Goodbye'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = b > 5\n",
     "myfunc(a)"
@@ -191,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'True'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z = 4 > 3  #true\n",
     "myfunc(z)"
@@ -229,20 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'False'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z = 4 < 3 #false\n",
     "myfunc(z)"
@@ -250,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,20 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5 define function myfunc takes in 2 arguments and returns their sum\n",
     "\n",
@@ -289,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -298,14 +211,13 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 6 de\n",
-    "fine function called \"is_even\" takes in one argument returns\n",
+    "# 6 define function called \"is_even\" takes in one argument returns\n",
     "# True if passed in value is even and False if not\n",
     "\n",
     "def is_even(x):\n",
@@ -314,13 +226,13 @@
     "    else:\n",
     "        return False\n",
     " \n",
-    "is_even(3)  #false\n",
+    "# is_even(3)  #false\n",
     "is_even(4)  #true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,67 +248,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "is_greater(5,6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "is_greater(6,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "is_greater(5,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,21 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n",
-      "50\n",
-      "200\n",
-      "2\n",
-      "345\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def myfunc(*args):\n",
     "    for item in args:\n",
@@ -437,18 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'fruit': 'apple', 'veggie': 'lettuce'}\n",
-      "My fruit of choise is apple\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  **kwargs  returns dictionary\n",
     "\n",
@@ -464,19 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 20, 30)\n",
-      "{'fruit': 'orange', 'food': 'eggs', 'animal': 'dog'}\n",
-      "I would like 30 eggs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def myfunc(*args,**kwargs):  #must pu args, kwargs in this order\n",
     "    print(args)\n",
@@ -488,20 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 8 - define function myfunc takes in arbitary number of arguments\n",
     "# and returns sum of those arguments\n",
@@ -515,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,20 +378,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1000, 2, 36, 56, 100, 4, 500]"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "myfunc(1000,2,36,41,56,77,100,51,4,381,500) \n",
     "# expected return values 1000,2,36,56,100,4,500"
@@ -562,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,27 +397,63 @@
     "#every even letter in upper case\n",
     "#every odd letter in lower case\n",
     "\n",
-    "def myfunc(old_string=\"abcdefg\"):\n",
-    "    new_string =\"\"\n",
-    "    for i in old_string:\n",
-    "        if index[i] %2 == 0:\n",
-    "            print(index[i])\n",
-    "            new_string.append(i.upper())\n",
-    "            print(new_string)\n",
+    "def myfunc(oldstring): \n",
+    "    newstring = \"\"    \n",
+    "    for i in range(0, len(oldstring)):\n",
+    "        if i % 2 == 0:\n",
+    "            newstring = newstring + (oldstring[i].lower())\n",
     "        else:\n",
-    "            new_string.append(i.lower())\n",
-    "            print(new_string)\n",
-    "    return new_string    "
+    "            newstring = newstring + (oldstring[i].upper())\n",
+    "    return newstring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aBcDeFgHiJkLmNoP'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(\"abcdefghijklmnop\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aNtHrOpOmOrPhIsM'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfunc(\"Anthropomorphism\")\n",
+    "#'aNtHrOpOmOrPhIsM'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "old_string = \"abcdefgh\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
