--- a/PythonFunctionsExercises3.ipynb
+++ b/PythonFunctionsExercises3.ipynb
@@ -1093,6 +1093,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write a Python function that checks whether a passed in string \n",
+    "#is palindrome or not.\n",
+    "\n",
+    "#Note: A palindrome is word, phrase, or sequence that reads \n",
+    "#the same backward as forward, e.g., madam or nurses run.\n",
+    "\n",
+    "def palindrome(s):\n",
+    "    \n",
+    "    #empty list\n",
+    "    reverse_string = []\n",
+    "    \n",
+    "    #get length of string\n",
+    "    i = len(s)\n",
+    "    \n",
+    "    #while loop\n",
+    "    while i > 0:\n",
+    "        # reverse letters in string into list\n",
+    "        reverse_string += s[i - 1]\n",
+    "        # decrease index i\n",
+    "        i = i - 1\n",
+    "    #join the letters in the list into string    \n",
+    "    final_string = ''.join(reverse_string)\n",
+    "    # compare the final string with the original string\n",
+    "    if final_string == s:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome('helleh')\n",
+    "#True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome('racecar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome('racecars')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
