--- a/PythonFunctionsExercises3.ipynb
+++ b/PythonFunctionsExercises3.ipynb
@@ -720,7 +720,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "def vol(rad):\n",
+    "    return (4.0/3)*(3.14)*(rad**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +740,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +778,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer 1.2\n",
+    "def ran_check(num,low,high):\n",
+    "    #check if num is between low and high\n",
+    "    #(including low and high)\n",
+    "    if num in range(low,high):\n",
+    "        print(\" %s is in the range\" %str(num))\n",
+    "    else:\n",
+    "        print(\"The number is outside the range.\")\n",
+    "        \n",
+    "   #This is NOT inclusive of high!!!     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +809,9 @@
    ],
    "source": [
     "#check\n",
-    "ran_check(7,2,7)"
+    "ran_check(7,2,7)\n",
+    "\n",
+    "#7 is in the range between 2 and 7"
    ]
   },
   {
@@ -798,7 +829,9 @@
    ],
    "source": [
     "#check\n",
-    "ran_check(8,2,7)"
+    "ran_check(8,2,7)\n",
+    "\n",
+    "#8 is NOT in the range between 2 and 7"
    ]
   },
   {
@@ -817,6 +850,7 @@
    "source": [
     "#Check\n",
     "ran_check(5,2,7)\n",
+    "\n",
     "#5 is in the range between 2 and 7"
    ]
   },
@@ -836,7 +870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer 2.2\n",
+    "def ran_bool(num,low,high):\n",
+    "    return num in range(low,high)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +890,7 @@
        "True"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +911,7 @@
        "False"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +959,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "def up_low(s):\n",
+    "    d={\"upper\":0, \"lower\":0}\n",
+    "    for c in s:\n",
+    "        if c.isupper():\n",
+    "            d[\"upper\"]+=1\n",
+    "        elif c.islower():\n",
+    "            d[\"lower\"]+=1\n",
+    "        else:\n",
+    "            pass\n",
+    "    print(\"Original String : \", s)\n",
+    "    print(\"No. of Upper case characters : \", d[\"upper\"])\n",
+    "    print(\"No. of Lower case characters : \", d[\"lower\"])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -984,16 +1051,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "def unique_list(l):\n",
+    "    x =[]\n",
+    "    for a in l:\n",
+    "        if a not in x:\n",
+    "            x.append(a)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1, 2, 3, 4, 5}"
+       "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,16 +1087,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A', 'B', 'C', 'D', 'E'}"
+       "['A', 'B', 'C', 'D', 'E']"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,12 +1129,30 @@
     "            total = i\n",
     "        else:\n",
     "            total = total * i\n",
-    "    return total    "
+    "    return total \n",
+    "\n",
+    "#is this working correctly?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "def multiply(numbers):\n",
+    "    total = numbers[0]\n",
+    "    for x in numbers:\n",
+    "        total *=x\n",
+    "    return total  \n",
+    "\n",
+    "#is this working correctly?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1161,7 @@
        "-24"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,16 +1173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60"
+       "180"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1129,7 +1229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "def palindrome(s):\n",
+    "    return s == s[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1249,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1270,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Answer\n",
+    "import string\n",
+    "\n",
+    "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
+    "    alphaset = set(alphabet)\n",
+    "    return alphaset <= set(str1.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1361,7 @@
        "True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,26 +1376,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abeghimnoprstuw\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ispan"
+    "ispangram(\"This is a new test but not a pangram\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
