--- a/PythonOOP.ipynb
+++ b/PythonOOP.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "188.4"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,23 +480,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OOP Inheritance and Polymorphorism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Animal():\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        print(\"ANIMAL CREATED\")\n",
+    "        \n",
+    "    def who_am_i(self):\n",
+    "        print(\"I am an animal\")\n",
+    "    \n",
+    "    def eat(self):\n",
+    "        print(\"I am eating\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'float' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-123-a6a86279f57c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmy_circle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'float' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANIMAL CREATED\n"
      ]
     }
    ],
    "source": [
-    "my_circle.area()"
+    "myanimal = Animal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am eating\n"
+     ]
+    }
+   ],
+   "source": [
+    "myanimal.eat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am an animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "myanimal.who_am_i()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog(Animal):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        Animal.__init__(self)\n",
+    "        print(\"Dog Created\")\n",
+    "        \n",
+    "    def who_am_i(self):\n",
+    "        print(\"I am a dog!\")\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        print(\"WOOF!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANIMAL CREATED\n",
+      "Dog Created\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydog = Dog()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am eating\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydog.eat()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a dog!\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydog.who_am_i()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WOOF!\n"
+     ]
+    }
+   ],
+   "source": [
+    "mydog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Polymorphism\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog():\n",
+    "    \n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        return self.name + \" says woolf!\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Cat():\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        return self.name + \" says meow!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "niko = Dog(\"niko\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "felix = Cat(\"felix\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "niko says woolf!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(niko.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "felix says meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(felix.speak())"
    ]
   },
   {
