--- a/PythonSimpleExercises4.ipynb
+++ b/PythonSimpleExercises4.ipynb
@@ -1466,7 +1466,7 @@
    "outputs": [],
    "source": [
     "#Section 15 - Advanced OOP Python Modules 1 hr 3min\n",
-    "# 94(20min), 95(2min), 96(1min) thurs 4/2"
+    "#96(1min) thurs 4/2"
    ]
   },
   {
